# Moon

./: .gitignore  .gitmodules  CMakeLists.txt  Moon.sln  README.md  temp_csg_test.cpp
docs/: ARCHITECTURE.md  CMakeLists.txt  DEVELOPER_GUIDE.md  MVP_DEFINITION.md  MVP_ROADMAP.md  ROADMAP.md  VISION.md  adr-0005-coordinate-system-and-matrix-conventions.md  adr-0006-static-crt-configuration.md  building-authoring-workflow.md  building-massing-system.md  building-system-ai.md  building-system.md  crt-migration-summary.md  csg-composable-object-system.md  csg-ui-design.md  editor-bridge.md  editor-webui.md  engine-adapters.md  engine-building.md  engine-character.md  engine-contracts.md  engine-core-camera.md  engine-core-input.md  engine-core-logging.md  engine-core-mesh.md  engine-core-scene.md  engine-environment.md  engine-persistence.md  engine-render.md  engine-samples.md  engine-terrain.md  external-dependencies.md  gpu-resource-management-best-practices.md  massing-building-guide.md  massing-rule-spec.md  material-priority-guide.md  material-textures-checklist.md  moon_ai_building_system_v8.md  object-system-ai.md  (+7 more)
engine/samples/: CMakeLists.txt  CSGTest.cpp  CSGTest.h  CSGUnitTest.cpp  CSGUnitTest.h  DebugGridRenderer.cpp  DebugGridRenderer.h  HelloEngine.vcxproj  HelloEngine.vcxproj.filters  HelloEngineImGui.cpp  HelloEngineImGui.h  SceneZipLoader.cpp  SceneZipLoader.h  TestBuildingSample.cpp  TestBuildingV8.cpp  TestCSG.cpp  TestCSGBlueprint.cpp  TestEnvironment.cpp  TestMaterial.cpp  TestScenes.h  TestTerrain.cpp  TestZipLoad.cpp  hello_sdk.cpp  hello_win32.cpp
(+546 files in other folders)
